--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -25,3 +25,13 @@ pytest>=7.4.3
 pytest-asyncio>=0.21.1
 httpx>=0.25.2
 factory-boy>=3.3.0
+
+# New dependencies for optimization and integrations
+pulp>=2.7.0
+numpy>=1.24.0
+aiohttp>=3.9.0
+aioredis>=2.0.0
+pika>=1.3.0
+schedule>=1.2.0
+cx_Oracle>=8.3.0
+websockets>=12.0
